<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/lblTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pedido_titulo" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pedido_lbl_correo" />

    <EditText
        android:id="@+id/editPedidoCorreo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="direccion@ejemplo.com"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pedido_lbl_modo_entrega" />

    <RadioGroup
        android:id="@+id/optPedidoModoEntrega"
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/optPedidoRetira"
            android:layout_width="148dp"
            android:layout_height="43dp"
            android:layout_weight="1"
            android:text="Retira en local" />

        <RadioButton
            android:id="@+id/optPedidoEnviar"
            android:layout_width="171dp"
            android:layout_height="46dp"
            android:layout_weight="1"
            android:text="Enviar a domicilio" />

    </RadioGroup>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pedido_lbl_direccion" />

    <EditText
        android:id="@+id/edtPedidoDireccion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Ingrese su dirección de envío"
        android:inputType="text"
        android:visibility="visible" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pedido_lbl_hora_entrega" />

    <EditText
        android:id="@+id/edtPedidoHoraEntrega"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="hh:mm"
        android:inputType="text"
        android:visibility="visible" />
    <ListView
        android:id="@+id/lstPedidoItems"
        android:layout_width="match_parent"
        android:layout_height="97dp"
        android:choiceMode="singleChoice"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnPedidoAddProducto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Agregar Producto" />

        <Button
            android:id="@+id/btnPedidoQuitarProducto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Quitar Producto" />
    </LinearLayout>

    <TextView
        android:id="@+id/lblCostoTotalPedido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Total pedido: $0.00" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnPedidoHacerPedido"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Hacer Pedido" />

        <Button
            android:id="@+id/btnPedidoVolver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Volver" />
    </LinearLayout>

</LinearLayout>
